fixed horizontal scroll on mobile now!

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,6 +191,11 @@
       margin-top:50%;
     }
   }
+  .home-predescription{
+    .container{
+      div{ border-right: 3px solid #eee;}
+    }
+  }
   .footer-container{
     .circle {
       width: 30px;
@@ -198,7 +203,7 @@
       left:46%;
 
       .fa {
-        margin-top:10px;
+        margin-top:8px;
       }
     }
   }
